--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "^12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-split": "^2.0.14"
   },
   "devDependencies": {
     "@types/node": "17.0.6",
