--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.3.1",
+    "monaco-editor": "^0.31.1",
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-split": "^2.0.14"
+    "react-split": "^2.0.14",
+    "xterm": "^4.16.0"
   },
   "devDependencies": {
     "@types/node": "17.0.6",
