--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,7 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "next",
-        "next/core-web-vitals",
-        "prettier"
-    ],
+    "extends": ["plugin:@typescript-eslint/recommended", "next", "next/core-web-vitals", "prettier"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -23,5 +18,8 @@
         "react": {
             "version": "detect"
         }
+    },
+    "rules": {
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
