--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-split": "^2.0.14",
-    "xterm": "^4.16.0"
+    "xterm": "^4.16.0",
+    "xterm-addon-fit": "^0.5.0",
+    "xterm-for-react": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.6",
