--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react-dom": "^17.0.2",
 		"react-scripts": "5.0.0",
 		"react-split": "^2.0.14",
+		"react-split-pane": "^0.1.92",
 		"typescript": "^4.5.5",
 		"web-vitals": "^2.1.4",
 		"xterm": "^4.17.0",
